syntax = "proto3";
package chef.automate.api.event_feed.request;
option go_package = "github.com/chef/automate/components/automate-gateway/api/event_feed/request";
message EventFilter {
  repeated string filter = 1;
  int64 start = 2;
  int64 end = 3;
  int32 page_size = 4;
  int64 after = 5;
  int64 before = 6;
  string cursor = 7;
  bool collapse = 8;
}
message EventCountsFilter {
  repeated string filter = 1;
  int64 start = 2;
  int64 end = 3;
}
